# ai-agent

./: .gitignore  PROJECT_TASKS.md  ai agent plan.odt  ai agent.odt
project/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  drop_db.py  index.html  nginx.conf  pyproject.toml  recreate_db.py  run_workflow.py  script.js  styles.css  test_task.py  test_task_2.py  test_trigger.py
project/alembic/: env.py
project/database/: schema.sql
project/docs/: agent-matrix.md  api-specification.md  architecture-change-log.md  data-flow.md  database-migration.md  dynamic-model-router.md  error-handling-resilience.md  llm-integration.md  llm-observability.md  mvp-scope.md  non-functional-requirements.md  opencode-architecture.md  risk-assessment.md  security-design.md  state-machine.md  testing-strategy.md
project/governance/: laws.yaml
project/profile/: index.html  styles.css
project/scratch/: check_progress.py  check_tasks.py  reset_task.py  test_verify.py  wait_and_check.py
project/scripts/: start.sh  stop.sh
project/shared/: cache.py  concurrency.py  database.py  security.py
project/specs/: auditor.yaml  devops.yaml  gatekeeper.yaml  mentor.yaml  monitoring.yaml  opencode_integration.yaml  orchestrator.yaml  specialist.yaml
project/tests/: conftest.py  test_agent_dispatcher.py  test_audit_service.py  test_blocked_timeout.py  test_cache_service.py  test_ci_integration.py  test_circuit_breaker.py  test_cli_error_ledger.py  test_concurrency.py  test_confidence_engine.py  test_context_builder.py  test_cost_governor.py  test_dashboard.py  (+38 more)
(+259 files in other folders)
